--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,10 @@ h1{
     display :border-box;
 
   }
+  .section{
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    padding-top: 80px; 
+}
