--- a/src/app/aboutus-card/aboutus-card.component.css
+++ b/src/app/aboutus-card/aboutus-card.component.css
@@ -2,9 +2,39 @@
     display: flex;
     box-sizing: border-box;
     align-items: center;
-    justify-content: center;height: 50vh;
+    justify-content: center;
 }
 img{
-    min-width: 100%;
-    min-height: 100%
+
+    object-fit: contain;
+    width: 100%;
+    height: 100%
 }
+.desktop_card{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+    width: 100%;
+}
+
+.desktop_caption_container{
+    width: 40%;
+}
+.desktop_caption_text{
+    width: 60%;
+}
+.desktop_image{
+    width: 60%;
+}
+
+.mobile_caption_container{
+    width: 100%;
+}
+.mobile_caption_text{
+    width: 100%;
+}
+.mobile_image{
+    width: 100%;
+}
+
