--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <a class="header-footer">Free island-wide shipping for orders above $50</a>
     </div>
     <div class="navbar ">
-        <div [ngClass]="!mobile? 'container' : 'container-mobile'">
+        <div class="container">
             <div class="navcontainer">
                 <div class="navcomponents" style="width:40% ;">
                     <img class="brand-logo" src="/assets/TPG_Logo_Nav.png" alt="logo" aria-hidden="true">
