--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -7,8 +7,7 @@
     height:30%;
   }
   .order-button{
-    width: 180px;
-    height: 25px;
+    
     display: block;
     position: relative;
     text-align: center;
@@ -16,9 +15,14 @@
     padding: 10px;
     color: white;
     line-height: 25px;
-    font-size: 25px;
+    padding: 20px 40px 20px 40px;
+    font-size: 1.5rem;
     text-decoration: none;
   
+  }
+  .order-button:hover{
+    background-color: rgba(255, 255, 255, 0.4);
+
   }
   .hero-banner {
     transition: 500ms ease-in-out;
