added contact us and carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,12 @@
 <body>
   <app-navbar [mobile]="mobile"></app-navbar>
   <app-aboutus-card [mobile]="mobile"></app-aboutus-card>
-  <app-menu-card [mobile]="mobile"></app-menu-card>
+  <app-menu-card [mobile]="mobile" [counter]="counter"></app-menu-card>
+  <app-contactus-card [mobile]="mobile"></app-contactus-card>
+
+
+  
 </body>
+<footer>
+  <p style="color: #ead8c2; font-size: .7rem;">COPYRIGHT &#169;2024, THE PROOFING GROUND. ALL RIGHTS RESERVED.</p>
+</footer>
