--- a/src/app/image-carousel/image-carousel.component.html
+++ b/src/app/image-carousel/image-carousel.component.html
@@ -1,1 +1,28 @@
-<p>image-carousel works!</p>
+<!-- carousel -->
+
+
+  <div class="carousel">
+    
+    <ng-container *ngFor="let slide of slides; let i = index" >
+      
+      
+     <div class="slide">
+        <img
+        *ngIf="i === currentSlide"
+        [src]="slide.url"
+        class="slide_image"
+        @carouselAnimation
+      />
+      </div>
+      
+    </ng-container>
+  
+    <!-- controls -->
+    <button class="control prev" (click)="onPreviousClick()">
+      <span class="arrow left"></span>
+    </button>
+    <button class="control next" (click)="onNextClick()">
+      <span class="arrow right"></span>
+    </button>
+  </div>
+
