--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                         <li><a routerLink="/">About</a></li>
                         <li><a routerLink="/about">Menu</a></li>
                         <li><a routerLink="/about">Contact</a></li>
-                        <li style=" border:1.5px solid white;"><a routerLink="/about">Order Now</a></li>
+                        <li style=" border:1.5px solid #ead8c2;"><a routerLink="/about">Order Now</a></li>
                     </ul>
 
                     <div *ngIf="mobile" style="margin-left: auto; border:1px solid #ead8c2;">
