--- a/src/app/aboutus-card/aboutus-card.component.css
+++ b/src/app/aboutus-card/aboutus-card.component.css
@@ -38,3 +38,57 @@ img{
     width: 100%;
 }
 
+.control {
+    border: none;
+    background-color: transparent;
+    outline: 0;
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0.5em;
+    color: white;
+    font-weight: bold;
+    font-size: 3em;
+    user-select: none;
+    height: 100%;
+    opacity: 80%;
+    transition: opacity 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+  
+  }
+  
+  .control:hover {
+    opacity: 1;
+  }
+  
+  .control:focus {
+    opacity: 1;
+  }
+  
+  .control.next {
+    right: 0;
+  }
+  
+  .control.prev {
+    left: 0;
+  }
+  
+  
+  /* style the arrows */
+  .arrow {
+    display: block;
+    border-left: 0.2rem solid white;
+    border-bottom: 0.2rem solid white;
+    width: 0.5rem;
+    height: 0.5rem;
+  
+  }
+  
+  .arrow.left {
+    transform: rotate(45deg);
+  }
+  
+  .arrow.right {
+    transform: rotate(225deg);
+  }
