--- a/src/app/aboutus-card/aboutus-card.component.html
+++ b/src/app/aboutus-card/aboutus-card.component.html
@@ -1,32 +1,63 @@
 <div class="section">
     <div class="container">
-        
+
         <div class="desktop_card">
             <div [ngClass]="!mobile? 'desktop_caption_container' : 'mobile_caption_container'">
-                <h3 *ngIf="!mobile" >ABOUT US</h3>
-                <br/>
-                <br/>
-                <br/>
+                <h3 *ngIf="!mobile">ABOUT US</h3>
+                <br />
+                <br />
+                <br />
                 <h2 class="bunketry_header">Hearty, healthy, homely</h2>
-                <br/>
+                <br />
                 <div [ngClass]="!mobile? 'desktop_caption_text' : 'mobile_caption_text'">
-                    <p>The Proofing Ground embraces the warmth of home to norish hearts and palates, and prove that quality always goes beyond. Enjoy our hand-kneaded sourdough and shokupan milk bread with curated compound butters, or indulge in our probiotic-rich kombucha and milk kefir - all freshly made on order</p>
+                    <p>The Proofing Ground embraces the warmth of home to norish hearts and palates, and prove that
+                        quality always goes beyond. Enjoy our hand-kneaded sourdough and shokupan milk bread with
+                        curated compound butters, or indulge in our probiotic-rich kombucha and milk kefir - all freshly
+                        made on order</p>
                 </div>
-             
+
 
             </div>
-            <div  [ngClass]="!mobile? 'desktop_image' : 'mobile_image'" >
+            <div [ngClass]="!mobile? 'desktop_image' : 'mobile_image'">
                 <img src="/assets/About_816x499.png">
             </div>
-            <h3 *ngIf="mobile" style="margin-right: auto;" >ABOUT US</h3>
+            <h3 *ngIf="mobile" style="margin-right: auto;">ABOUT US</h3>
         </div>
-     
+
 
     </div>
 
 </div>
-<br/>
+<br />
 
-<div style ="background-color: #56272d; height:20vh">
-    <p>carousel</p>
+<div style="background-color: #56272d;height: 200px;">
+    <div style="display: block; height: 100%; width: 100%; position: relative;">
+        <div style="position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
+        border-radius: 0.5em;">
+            <div
+                style="display: flex; height: 100%; width: 60%; object-fit: contain;align-items: center;justify-content: center;position: absolute;
+                top: 0;
+                left: 25%;">
+                <img src="/assets/Prof_Leah.png">
+                <p style="color:#ead8c2; ">Baking forces me to slow down. Everything these days is designed and
+                    optimised for speed, often at the expense of the joy and the mindfulness in the process. You can't
+                    rush bread, however - if it needs to proof, it needs to prood. There's a profound appreciation of
+                    time and purpose the I've discovered through baking, that I wish to share with you all</p>
+            </div>
+            <button class="control prev">
+                <span class="arrow left"></span>
+            </button>
+            <button class="control next">
+                <span class="arrow right"></span>
+            </button>
+        </div>
+
+    </div>
+
 </div>
