--- a/src/app/menu-card/menu-card.component.css
+++ b/src/app/menu-card/menu-card.component.css
@@ -6,10 +6,16 @@
     flex-direction: column;
 }
 .menu_carousel{
+    display: block;
     width: 34%;
+    
 }
 .mobile_menu_carousel{
+    max-width:100%;
+    max-height:100%;
+    height: 400px;
     width: 100%;
+
 }
 .menu{
     display: flex;
@@ -47,11 +53,12 @@
     text-align: right;
     width: 20%;
 }
-img{
+.carousel-container{
 
     object-fit: contain;
     width: 100%;
-    height: 100%
+    height: 100%;
+
 }
 table{
     width: 100%;
