--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { width: 100% }
-body { margin: 0; 
+body,footer,header { 
+  margin: 0; 
     font-family: 'Bunketry2',!important;
     color : #0d1f23;
     background-color: #ead8c2;}
@@ -13,7 +14,7 @@ body { margin: 0;
     font-family: 'Bunketry2'; /*a name to be used later*/
     src: url('/assets/gadugi.ttf') format("truetype"); /*URL to font*/
 }
-h1{
+h1,h3{
     color : #706563!important;
 }
 .bunketry_header{
@@ -38,5 +39,15 @@ h1{
     box-sizing: border-box;
     align-items: center;
     justify-content: center;
-    padding-top: 80px; 
+    padding-top: 40px; 
+    padding-bottom: 40px; 
+}
+
+footer{
+  background-color: #56272d; 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+
 }
