--- a/src/app/contactus-card/contactus-card.component.html
+++ b/src/app/contactus-card/contactus-card.component.html
@@ -1,19 +1,34 @@
-<div class="section">
+<div class="section" id="contact-section">
     <div class="container" [ngClass]="!mobile? '' : 'mobile_container'">
         <div [ngClass]="!mobile? 'left_container' : 'mobile_left_container'">
             <h3 >GET IN TOUCH</h3>
-
-            <span>
-                <img src="/assets/Contact_WA.png" style="object-fit: contain;"> &nbsp; +65 9806 1911</span>
+            <a style="text-decoration: none;color: #0d1f23;" href="https://wa.me/6589061911">    
+                <span >
+                    <img src="/assets/Contact_WA.png" style="object-fit: contain;"> &nbsp; +65 8906 1911
+                </span>
+            </a>
+        
             <br/>
-            <span>
-                <img src="/assets/Contact_Email.png"  style="object-fit: contain;"> &nbsp; contact&#64;theproofingground.sg</span>
+            <a style="text-decoration: none;color: #0d1f23;" href="mailto:contact@theproofingground.sg">
+                <span>
+                    <img src="/assets/Contact_Email.png"  style="object-fit: contain;"> &nbsp; contact&#64;theproofingground.sg
+                </span>
+            </a>
+            
             <br/>
-            <span>
-                <img src="/assets/Contact_TT.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground</span>
+            <a style="text-decoration: none;color: #0d1f23;" href="https://tiktok.com/@theproofingground">
+                <span>
+                    <img src="/assets/Contact_TT.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
+                </span>
+            </a>
+            
             <br/>
-            <span>
-                <img src="/assets/Contact_IG.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground</span>
+            <a style="text-decoration: none;color: #0d1f23;" href="https://instagram.com/theproofingground">
+                <span >
+                    <img src="/assets/Contact_IG.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
+                </span>
+            </a>
+            
             <br/>
         </div>
         <div [ngClass]="!mobile? 'right_container' : 'mobile_right_container'" >
