--- a/src/app/aboutus-card/aboutus-card.component.html
+++ b/src/app/aboutus-card/aboutus-card.component.html
@@ -1,4 +1,4 @@
-<div class="section">
+<div class="section" id="about-section">
     <div class="container">
 
         <div class="desktop_card">
@@ -30,34 +30,7 @@
 </div>
 <br />
 
-<div style="background-color: #56272d;height: 200px;">
-    <div style="display: block; height: 100%; width: 100%; position: relative;">
-        <div style="position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
-        border-radius: 0.5em;">
-            <div
-                style="display: flex; height: 100%; width: 60%; object-fit: contain;align-items: center;justify-content: center;position: absolute;
-                top: 0;
-                left: 25%;">
-                <img src="/assets/Prof_Leah.png">
-                <p style="color:#ead8c2; ">Baking forces me to slow down. Everything these days is designed and
-                    optimised for speed, often at the expense of the joy and the mindfulness in the process. You can't
-                    rush bread, however - if it needs to proof, it needs to prood. There's a profound appreciation of
-                    time and purpose the I've discovered through baking, that I wish to share with you all</p>
-            </div>
-            <button class="control prev">
-                <span class="arrow left"></span>
-            </button>
-            <button class="control next">
-                <span class="arrow right"></span>
-            </button>
-        </div>
-
-    </div>
+<div >
+    <app-aboutus-carousel [mobile]="mobile"></app-aboutus-carousel>
 
 </div>
