--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -38,10 +38,15 @@
     padding-left: 2px;
     padding-right: 2px;
     height:50px;
+    cursor: pointer;
 
 }
 .navbar-links li:hover{
     text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-underline-offset: 10px;
+  
+
 }
 .navcontainer{
     display: flex;
