--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,9 @@
   <br/>
 
 
-  
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS5L5WVZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 </body>
 <footer>
   <p style="color: #ead8c2; font-size: .7rem;">COPYRIGHT &#169;2024, THE PROOFING GROUND. ALL RIGHTS RESERVED.</p>
