change google tag location

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="smallbreak">
   <br />
 </div>
-<body>
+<main>
   <app-navbar [mobile]="mobile"></app-navbar>
   <app-aboutus-card [mobile]="mobile"></app-aboutus-card>
   <app-menu-card [mobile]="mobile" [counter]="counter"></app-menu-card>
@@ -16,10 +16,8 @@
   <br/>
 
 
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS5L5WVZ" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-</body>
+
+</main>
 <footer>
   <p style="color: #ead8c2; font-size: .7rem;">COPYRIGHT &#169;2024, THE PROOFING GROUND. ALL RIGHTS RESERVED.</p>
 </footer>
