--- a/src/app/aboutus-carousel/aboutus-carousel.component.html
+++ b/src/app/aboutus-carousel/aboutus-carousel.component.html
@@ -26,4 +26,7 @@
         </div>
 
     </div>
+    <div id="end_quote" height="0" width="0" style="display:none;visibility:hidden">
+
+    </div>
 </div>
