change from png to webp and redirect now opens new tab

--- a/src/app/aboutus-card/aboutus-card.component.html
+++ b/src/app/aboutus-card/aboutus-card.component.html
@@ -19,7 +19,7 @@
 
             </div>
             <div [ngClass]="!mobile? 'desktop_image' : 'mobile_image'">
-                <img src="/assets/About_816x499.png">
+                <img src="/assets/About_816x499.webp">
             </div>
             <h3 *ngIf="mobile" style="margin-right: auto;">ABOUT US</h3>
         </div>
