--- a/src/app/contactus-card/contactus-card.component.html
+++ b/src/app/contactus-card/contactus-card.component.html
@@ -4,28 +4,28 @@
             <h3 >GET IN TOUCH</h3>
             <a style="text-decoration: none;color: #0d1f23;" href="https://api.whatsapp.com/send?phone=6589061911&text=Hello%20The%20Proofing%20Ground%21%0D%0A%0D%0AName:%0D%0AItems:%0D%0ADelivery/Pickup:%0D%0ADelivery%20Address:%0D%0A%0D%0AWe%20will%20confirm%20your%20order%20as%20soon%20as%20possible.%20For%20our%20full%20menu,%20or%20if%20you%20do%20not%20receive%20our%20confirmation%20within%2030mins,%20please%20place%20an%20order%20through%20our%20website:%20theproofingground.sg%20for%20instant%20confirmation.%20Thank%20you%21" id="out_whatsapp">    
                 <span >
-                    <img src="/assets/Contact_WA.png" style="object-fit: contain;"> &nbsp; +65 8906 1911
+                    <img src="/assets/Contact_WA.webp" style="object-fit: contain;"> &nbsp; +65 8906 1911
                 </span>
             </a>
         
             <br/>
             <a style="text-decoration: none;color: #0d1f23;" href="mailto:contact@theproofingground.sg" id="out_email">
                 <span>
-                    <img src="/assets/Contact_Email.png"  style="object-fit: contain;"> &nbsp; contact&#64;theproofingground.sg
+                    <img src="/assets/Contact_Email.webp"  style="object-fit: contain;"> &nbsp; contact&#64;theproofingground.sg
                 </span>
             </a>
             
             <br/>
             <a style="text-decoration: none;color: #0d1f23;" href="https://tiktok.com/@theproofingground" id="out_tiktok">
                 <span>
-                    <img src="/assets/Contact_TT.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
+                    <img src="/assets/Contact_TT.webp"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
                 </span>
             </a>
             
             <br/>
             <a style="text-decoration: none;color: #0d1f23;" href="https://instagram.com/theproofingground" id="out_instagram">
                 <span >
-                    <img src="/assets/Contact_IG.png"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
+                    <img src="/assets/Contact_IG.webp"  style="object-fit: contain;"> &nbsp; &#64;theproofingground
                 </span>
             </a>
             
@@ -39,9 +39,9 @@
                 <h3 >CORPORATE AND GROUP ORDERS</h3>
                 <p>Proofing happiness for customer from:</p>
                 <div class="customer_panel">
-                    <img src="/assets/Review_Google.png"> 
-                    <img src="/assets/Review_Meta.png"> 
-                    <img src="/assets/Review_Asia.png"> 
+                    <img src="/assets/Review_Google.webp"> 
+                    <img src="/assets/Review_Meta.webp"> 
+                    <img src="/assets/Review_Asia.webp"> 
                 </div>
             </div>
             
