--- a/src/app/menu-card/menu-card.component.html
+++ b/src/app/menu-card/menu-card.component.html
@@ -117,8 +117,8 @@
                 </div>
 
                 <h2 class="bunketry_header" style="margin-left: auto;padding-bottom: 5px;padding-bottom: 5px;">Prove it yourself!</h2>
-                <div style="margin-left: auto; ">
-                    <a href="https://theproofingground.cococart.co?utm_source=organic&utm_medium=website&utm_campaign=nav_order&utm_id=12393813481" class="order-button" id="menu_order"> Order Now</a>
+                <div style="margin-left: auto;     cursor: pointer;" >
+                    <a (click)="orderRedirect()" class="order-button" id="menu_order"> Order Now</a>
                 </div>
 
             </div>
