--- a/src/app/image-carousel/image-carousel.component.html
+++ b/src/app/image-carousel/image-carousel.component.html
@@ -12,6 +12,7 @@
         [src]="slide.url"
         class="slide_image"
         @carouselAnimation
+        loading="lazy"
       />
       </div>
       
