--- a/src/app/menu-card/menu-card.component.html
+++ b/src/app/menu-card/menu-card.component.html
@@ -3,7 +3,7 @@
         
         <h3 >OUR MENU</h3>
         
-        <h2 class="bunketry_header">Bread, brews & Beyond</h2>
+        <h2 class="bunketry_header">Bread, brews & beyond</h2>
         <br/>
         <br/>
 
@@ -33,7 +33,7 @@
                             </tr>
                             <br/>
                             <tr>
-                                <td class="menu_item" style="font-weight: bold;">Milkbread &#40;approx 380g&#41;</td>
+                                <td class="menu_item" style="font-weight: bold;">Milk bread &#40;approx 380g&#41;</td>
 
                             </tr>
                             <tr>
@@ -51,7 +51,7 @@
                             <br />
                             <h3>BEYOND</h3>
                             <p>
-                                For corporate orders, workshops and events, please contact us directly
+                                For corporate orders, workshops and events, please contact us directly.
                             </p>
                             
                         </div>
@@ -109,7 +109,7 @@
                         <br />
                         <h3>BEYOND</h3>
                         <p>
-                            For corporate orders, workshops and events, please contact us directly
+                            For corporate orders, workshops and events, please contact us directly.
                         </p>
                         <br/>
                     </div>
