--- a/src/app/aboutus-card/aboutus-card.component.html
+++ b/src/app/aboutus-card/aboutus-card.component.html
@@ -10,10 +10,10 @@
                 <h2 class="bunketry_header">Hearty, healthy, homely</h2>
                 <br />
                 <div [ngClass]="!mobile? 'desktop_caption_text' : 'mobile_caption_text'">
-                    <p>The Proofing Ground embraces the warmth of home to norish hearts and palates, and prove that
-                        quality always goes beyond. Enjoy our hand-kneaded sourdough and shokupan milk bread with
+                    <p>The Proofing Ground embraces the warmth of home to nourish hearts and palates, and prove that
+                        quality always goes beyond. Enjoy our hand-kneaded sourdoughs and shokupan milk breads with
                         curated compound butters, or indulge in our probiotic-rich kombucha and milk kefir - all freshly
-                        made on order</p>
+                        made on order.</p>
                 </div>
 
 
