--- a/src/app/aboutus-carousel/aboutus-carousel.component.css
+++ b/src/app/aboutus-carousel/aboutus-carousel.component.css
@@ -55,7 +55,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 0.5em;
-    color: white;
+    color: #ead8c2;
     font-weight: bold;
     font-size: 3em;
     user-select: none;
@@ -92,8 +92,8 @@
   /* style the arrows */
   .arrow {
     display: block;
-    border-left: 0.2rem solid white;
-    border-bottom: 0.2rem solid white;
+    border-left: 0.2rem solid #ead8c2;
+    border-bottom: 0.2rem solid #ead8c2;
     width: 0.5rem;
     height: 0.5rem;
   
