--- a/src/app/menu-card/menu-card.component.html
+++ b/src/app/menu-card/menu-card.component.html
@@ -118,7 +118,7 @@
 
                 <h2 class="bunketry_header" style="margin-left: auto;padding-bottom: 5px;padding-bottom: 5px;">Prove it yourself!</h2>
                 <div style="margin-left: auto;     cursor: pointer;" >
-                    <a (click)="orderRedirect()" class="order-button" id="menu_order"> Order Now</a>
+                    <a [routerLink]="['/order']"class="order-button" id="menu_order"> Order Now</a>
                 </div>
 
             </div>
