--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,7 +1,7 @@
-<div class="hero-banner" [ngStyle]="{'background-image': 'url(' + background_image + ')' }" >
+<div *ngIf="!hasRoute('/order')" class="hero-banner" [ngStyle]="{'background-image': 'url(' + background_image + ')' }" >
     <img class="brand-logo" src="/assets/TPG_Logo_H1.webp" alt="logo" aria-hidden="true">
     <img class="brand-logo" src="/assets/TPG_Logo_H2.webp" alt="logo" aria-hidden="true">
     <br/>
-    <a (click)="orderRedirect()" class="order-button" id="home_order"> Order Now</a>
+    <a [routerLink]="['/order']" class="order-button" id="home_order"> Order Now</a>
 
 </div>
