--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,6 +2,6 @@
     <img class="brand-logo" src="/assets/TPG_Logo_H1.webp" alt="logo" aria-hidden="true">
     <img class="brand-logo" src="/assets/TPG_Logo_H2.webp" alt="logo" aria-hidden="true">
     <br/>
-    <a [routerLink]="['/order']" class="order-button" id="home_order"> Order Now</a>
+    <a (click)="orderRedirect()" class="order-button" id="home_order"> Order Now</a>
 
 </div>
