--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                         <li [routerLink]="['']" fragment="about-section" id="nav_about" ><a >About</a></li>
                         <li [routerLink]="['']" fragment="menu-section" id="nav_menu"><a >Menu</a></li>
                         <li [routerLink]="['']" fragment="contact-section" id="nav_contact"><a >Contact</a></li>
-                        <li  [routerLink]="['/order']" style=" border:1.5px solid #ead8c2;" id="nav_order"><a  style="text-decoration: none;color: #ead8c2;" >Order Now</a></li>
+                        <li  (click)="orderRedirect()" style=" border:1.5px solid #ead8c2;" id="nav_order"><a  style="text-decoration: none;color: #ead8c2;" >Order Now</a></li>
                     </ul>
 
                     <div *ngIf="mobile" style="margin-left: auto; border:1px solid #ead8c2;">
@@ -37,7 +37,7 @@
                                 <span [routerLink]="['']" fragment="contact-section" id="nav_m_contact">Contact</span>
                             </button>
                             <button mat-menu-item>
-                                <a  [routerLink]="['/order']"  style="text-decoration: none;" id="nav_m_order">
+                                <a  (click)="orderRedirect()"  style="text-decoration: none;" id="nav_m_order">
                                     <span id="nav_m_order">Order</span>
                                 </a>
                                 
